Fix design on smaller screens (#269)
* Fix design on smaller screens

* fix main index items not aligned on the right side

--- a/aiida-registry-app/src/App.css
+++ b/aiida-registry-app/src/App.css
@@ -275,22 +275,9 @@ span.badge-right {
 
 @media only screen and (min-width : 150px) and (max-width : 780px)
   {
-    .submenu-entry
-      {
-        width:70%;
-        min-height:140px;
-        padding:10px;
-        margin: 10px;
-        padding-left: 40px;
-        padding-right: 40px;
-        overflow: auto;
-      }
     header
       {
         max-width: 100vw;
-      }
-      #details {
-        width: 100%;
       }
       #detailsContainer {
         margin-left: 5px;
