--- a/aiida-registry-app/src/Components/PluginsList.css
+++ b/aiida-registry-app/src/Components/PluginsList.css
@@ -3,10 +3,21 @@
     padding:10px;
     margin: 20px;
     padding-left: 40px;
-    padding-right: 40px;
     background-color:rgba(192, 190, 190, 0.19);
     border:1px solid rgba(152, 152, 152, 0.31);
     border-radius:4px;
     -webkit-box-shadow:inset 0 1px 1px rgba(0,0,0,.05);
     box-shadow:inset 0 1px 1px rgba(0,0,0,.05);
 }
+
+@media only screen and (min-width : 150px) and (max-width : 780px)
+  {
+    .submenu-entry
+      {
+        width:95%;
+        min-height:140px;
+        padding: 5px 0 0 5px;
+        margin: 10px 0 0 0;
+        overflow: auto;
+      }
+  }
